--- a/tests-regression/Dockerfile.nctests
+++ b/tests-regression/Dockerfile.nctests
@@ -25,6 +25,7 @@ ENV HDF5VER=1.14.6
 ENV H5VER=1.14.6
 ENV HDF5_VER=hdf5-${HDF5VER}
 ENV HDF5_FILE=${HDF5_VER}.tar.bz2
+ENV H5ROS3=FALSE
 ENV PNCVER=1.12.3
 ##
 # Let the user specify the branches.
@@ -61,6 +62,7 @@ ENV WORKING_DIRECTORY=/workdir
 ENV BITNESS=64
 ENV USE_CC=gcc
 ENV USE_CXX=g++
+
 
 ENV RUNC=TRUE
 ENV RUNF=TRUE
