--- a/tests-regression/Dockerfile.nctests
+++ b/tests-regression/Dockerfile.nctests
@@ -27,6 +27,7 @@ ENV HDF5_VER=hdf5-${HDF5VER}
 ENV HDF5_FILE=${HDF5_VER}.tar.bz2
 ENV H5ROS3=FALSE
 ENV PNCVER=1.12.3
+ENV BASEDIR=/environments
 
 # AWS-releated
 ENV USES3INT=FALSE
@@ -155,6 +156,8 @@ COPY run_netcdf_tests.sh ${HOME}/
 COPY run_tests.sh ${HOME}/
 COPY install_hdf5.sh ${HOME}/
 COPY install_mpich.sh ${HOME}/
+COPY env_activate.sh ${HOME}/
+COPY env_deactivate.sh ${HOME}/
 
 COPY README.md ${HOME}/
 COPY Dockerfile.nctests ${HOME}/
@@ -169,8 +172,12 @@ RUN dos2unix ${HOME}/run_tests.sh
 RUN dos2unix ${HOME}/run_netcdf_tests.sh 
 RUN dos2unix ${HOME}/install_hdf5.sh
 RUN dos2unix ${HOME}/install_mpich.sh
+RUN dos2unix ${HOME}/env_activate.sh
+RUN dos2unix ${HOME}/env_deactivate.sh
 RUN chmod 755 ${HOME}/install_mpich.sh
 RUN chmod 755 ${HOME}/install_hdf5.sh
+RUN chmod 755 ${HOME}/env_activate.sh
+RUN chmod 755 ${HOME}/env_deactivate.sh
 
 
 ENTRYPOINT ["/bin/bash", "-l", "-e", "/home/tester/run_tests.sh"]
